--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
 
 
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
     .menu {
         display: none;
     }
@@ -95,8 +95,8 @@ body {
     
         .mobile-menu {
             position: fixed;
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            height: 100vh;
             z-index: 1000;
             top: 0;
             left: 0;
@@ -134,6 +134,11 @@ body {
         .mobile-menu-container {
             position: relative;
             padding: 80px 40px 40px 40px;
+            height: 100vh;
+
+            display: flex;
+            flex-direction: column;
+            
         }
     
         .menu-link-mobile {
@@ -153,14 +158,16 @@ body {
     
     
         .page-nav-mobile {
-            margin-bottom: 244px;
+            margin-bottom: auto;
         }
+
+        
     
-        .menu-item-mobile {
+        .menu-item-mobile:not(:last-child) {
             margin-bottom: 40px;
         }
     
-        .contact-phone-number-mobile {
+        .contact-phone-mobile-link {
             font-weight: 500;
             font-size: 36px;
             line-height: 1.11;
@@ -172,7 +179,7 @@ body {
             margin-bottom: 40px;
         }
     
-        .contact-mail-mobile {
+        .contact-mail-mobile-link {
             font-weight: 500;
             font-size: 20px;
             line-height: 1.2;
@@ -188,14 +195,16 @@ body {
     
         .social-list-mobile {
             display: flex;
+            align-items: center;
+            justify-content: center;
         }
     
-        .social-list-item-mobile {
+        /* .social-list-item-mobile {
             display: flex;
             justify-content: center;
             width: 40px;
     
-        }
+        } */
     
     
         .social-list-item-mobile:not(:last-child) {
@@ -219,6 +228,12 @@ body {
         .social-icon {
             fill: var(--color-light);
         }
+
+        .page-header {
+            padding-top: 24px;
+            padding-bottom: 24px;
+        
+        }
 }
 
 
@@ -229,12 +244,6 @@ body {
     justify-content: space-between;
 }
 
-.page-header {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
-}
-
 .mobile-menu-open {
     background-color: transparent;
     border: none;
@@ -242,8 +251,6 @@ body {
     height: 32px;
 
 }
-
-
 
 .logo {
     font-family: 'Raleway', sans-serif;
@@ -272,10 +279,17 @@ body {
         display: none;
     }
 
+    .page-header {
+        padding-top: 24px;
+            
+    }
+
     .page-nav {
         display: flex;
         align-items: center;
     }
+
+    
 
     .menu {
         display: flex;
@@ -464,124 +478,368 @@ body {
 
 /* ============HERO============= */
 
-.hero-title {
-    font-weight: 500;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--color-white);
-    margin-bottom: 48px;
+/* Phone____________ */
+@media screen and (max-width: 767.98px) {
+    .hero-title {
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 1.11;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: var(--color-white);
+        margin-bottom: 72px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 318px;
+        
+        }
 
+    .hero {
+        padding-top: 112px;
+        padding-bottom: 112px;
+        max-width: 767.98px;
+        margin: 0 auto;
+    
+        background: var(--color-title);
+        text-align: center;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../img/people-office.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    
+        }
+
+    .hero-button {
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.19;
+        align-items: center;
+        letter-spacing: 0.04em;
+        color: var(--color-white);
+        background-color: var(--color-accent);
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        padding: 16px 32px;
+        transition: background-color var(--transition-dur-func), box-shadow var(--transition-dur-func);
+        }
+    
+        .hero-button:hover,
+        .hero-button:focus {
+            background-color: #404BBF;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        }
+
+}
+
+/* Tablet______________ */
+
+@media screen and (min-width: 768px) {
+    .hero-title {
+            font-weight: 500;
+            font-size: 56px;
+            line-height: 1.07;
+            text-align: center;
+            letter-spacing: 0.02em;
+            color: var(--color-white);
+            margin-bottom: 40px;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 494px;
+        }
+
+    .hero {
+            
+        padding-top: 112px;
+        padding-bottom: 137px;
+        
+        margin: 0 auto;
+        background: var(--color-title);
+        text-align: center;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                url(../img/people-office.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    
+        }
+
+        .hero-button {
+            font-family: inherit;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.19;
+            align-items: center;
+            letter-spacing: 0.04em;
+            color: var(--color-white);
+            background-color: var(--color-accent);
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            padding: 16px 32px;
+            transition: background-color var(--transition-dur-func), box-shadow var(--transition-dur-func);
+        }
+    
+        .hero-button:hover,
+        .hero-button:focus {
+            background-color: #404BBF;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        }
+}
+
+/* Desktop___________ */
+
+@media screen and (min-width: 1200px) {
+.hero-title {
+        font-weight: 500;
+        font-size: 56px;
+        line-height: 1.07;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: var(--color-white);
+        margin-bottom: 48px;
 }
 
 .hero {
-    padding-top: 192px;
-    padding-bottom: 192px;
-    max-width: 1440px;
-    margin: 0 auto;;
-    background: var(--color-title);
-    text-align: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../img/people-office.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+        padding-top: 192px;
+        padding-bottom: 192px;
+        max-width: 1440px;
+        margin: 0 auto;
+        background: var(--color-title);
+        text-align: center;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../img/people-office.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
 
+    }
+
+
+    .hero-button {
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.19;
+        align-items: center;
+        letter-spacing: 0.04em;
+        color: var(--color-white);
+        background-color: var(--color-accent);
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        padding: 16px 32px;
+        transition: background-color var(--transition-dur-func), box-shadow var(--transition-dur-func);
+    }
+    
+    .hero-button:hover,
+    .hero-button:focus {
+        background-color: #404BBF;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 }
 
-.hero-button {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    align-items: center;
-    letter-spacing: 0.04em;
-    color: var(--color-white);
-    background-color: var(--color-accent);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 16px 32px;
-    transition: background-color var(--transition-dur-func), box-shadow var(--transition-dur-func);
-}
 
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #404BBF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+
 
 
 
 /* ===================ABOUT============== */
 
-.section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+
+
+/* Phone____________ */
+@media screen and (max-width: 767.98px) {
+    .about-logo {
+        display: none;
+    }
+
+    .section {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    .about-title,
+    .filter-title {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+    
+    }
+
+    .about-list-title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        color: var(--color-title);
+        margin-bottom: 8px;
+        text-align: center;
+    }
+    .about-text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--color-text);
+    }
+
+    .about-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
+
+
 }
 
 
+/* Tablet__________ */
 
-.about-list {
-    display: flex;
-    align-items: center;
+@media screen and (min-width: 768px) {
+
+    .about-logo {
+        display: none;
+    }
+
+    .about-title,
+    .filter-title {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+    
+    }
+
+    .section {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    .about-list-title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        color: var(--color-title);
+        margin-bottom: 8px;
+    }
+
+    .about-list {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    
+    
+    .about-item:nth-child(2n+1) {
+        margin-right: 24px;
+    }
+    
+    .about-item {
+        width: calc((100% - 48px)/2);
+    }
+
+    .about-text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--color-text);
+    }
+
+    .about-item:not(:nth-last-child(-n + 2)) {
+        margin-bottom: 72px;
+    }
+
 }
 
 
-.about-item:not(:last-child) {
-    margin-right: 24px;
+/* Desk___________ */
+
+@media screen and (min-width: 1200px) {
+
+    .section {
+            padding-top: 120px;
+            padding-bottom: 120px;
+        }
+    
+    
+    
+        .about-list {
+            display: flex;
+            align-items: center;
+        }
+    
+    
+        .about-item:not(:last-child) {
+            margin-right: 24px;
+        }
+    
+        .about-item {
+            width: calc((100% - 72px)/4);
+        }
+    
+        .about-title,
+        .filter-title {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            border: 0;
+            padding: 0;
+            white-space: nowrap;
+            clip-path: inset(100%);
+            clip: rect(0 0 0 0);
+            overflow: hidden;
+    
+        }
+    
+        .about-list-title {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            color: var(--color-title);
+            margin-bottom: 8px;
+        }
+    
+        .about-text {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: var(--color-text);
+        }
+    
+        .about-logo {
+            display: block;
+    
+        }
+    
+        .about-bg {
+            display: flex;
+            height: 112px;
+            justify-content: center;
+            align-items: center;
+            background-color: var(--color-light);
+            margin-bottom: 8px;
+    
+        }
+
 }
 
-.about-item {
-    width: calc((100% - 72px)/4);
-}
 
-.about-title,
-.filter-title {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-
-}
-
-.about-list-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--color-title);
-    margin-bottom: 8px;
-}
-
-.about-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--color-text);
-}
-
-.about-logo {
-    display: block;
-
-}
-
-.about-bg {
-    display: flex;
-    height: 112px;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-light);
-    margin-bottom: 8px;
-
-}
 
 /* ======================WORKS======================= */
 
