--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,13 @@ body {
         display: none;
     }
 
+        .page-header-container {
+            padding-left: 15px;
+            padding-right: 15px;
+            margin: 0;
+            max-width: 100%;
+        }
+
         /* ----MOBILE MENU----- */
     
         .mobile-menu {
@@ -184,12 +191,16 @@ body {
         .social-list-mobile {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
+        }
+
+        .menu-link-mobile.current {
+            color: var(--color-accent);
         }
     
-        .social-list-item-mobile:not(:last-child) {
+        /* .social-list-item-mobile:not(:last-child) {
             margin-right: 56px;
-        }
+        } */
     
         .social-icon {
             fill: var(--color-light);
@@ -212,6 +223,8 @@ body {
         .page-header {
             padding-top: 24px;
             padding-bottom: 24px;
+            background: var(--color-white);
+            box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);  
         }
 }
 
@@ -246,6 +259,12 @@ body {
 /* Стили для планшета_______________ */
 
 @media screen and (min-width: 768px) {
+
+    .page-header {
+        background: var(--color-white);
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
+
     .mobile-menu {
         display: none;
     }
@@ -1095,6 +1114,9 @@ screen (min-resolution: 2dppx) (min-width: 1200px) {
     .customers-item:not(:last-child) {
         margin-right: 24px;
     }
+    .customers-item:nth-child(-n + 3) {
+        margin-bottom: 0px;
+    }
 }
 
 
@@ -1175,7 +1197,8 @@ screen (min-resolution: 2dppx) (min-width: 1200px) {
     .footer-form-input {
         background-color: var(--color-title);
         color: var(--color-white);
-        width: 396px;
+        width: 100%;
+        max-width: 396px;
         min-height: 40px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 4px;
@@ -1388,130 +1411,337 @@ screen (min-resolution: 2dppx) (min-width: 1200px) {
 
 /* =================FILTER================== */
 
+
+/* Phone_____________ */
+@media screen and (max-width: 767.98px) {
+    .filter-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+        justify-content: flex-start;
+        padding-top: 48px;
+        padding-bottom: 48px;
+    }
+
+    /* .container {
+        margin: 0;
+    } */
+
 .btn {
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--color-accent);
-    background: var(--color-light);
-    border: 1px solid var(--color-soft);
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 12px 24px;
-    transition: color var(--transition-dur-func), background-color var(--transition-dur-func), box-shadow var(--transition-dur-func), border var(--transition-dur-func) ; 
+        font-family: inherit;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 1.5;
+        display: flex;
+
+        /* align-items: center;
+        text-align: center; */
+        letter-spacing: 0.04em;
+        color: var(--color-accent);
+        background: var(--color-light);
+        border: 1px solid var(--color-soft);
+        border-radius: 4px;
+        cursor: pointer;
+        padding: 12px 24px;
+        transition: color var(--transition-dur-func), background-color var(--transition-dur-func), box-shadow var(--transition-dur-func), border var(--transition-dur-func);
+    }
+
+    .btn:hover,
+    .btn:focus {
+        color: var(--color-white);
+        background-color: var(--color-accent);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border: 1px solid var(--color-accent);
+    }
+
+    .btn-active {
+        color: var(--color-white);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        background-color: var(--color-accent);
+        border: 1px solid var(--color-accent);
+    }
 }
 
-.btn:hover,
-.btn:focus {
-    color: var(--color-white);
-    background-color: var(--color-accent);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border: 1px solid var(--color-accent);
+/* Tablet___________ */
+@media screen and (min-width: 768px) {
+    .filter-list {
+        display: flex;
+        text-align: center;
+        gap: 24px;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+
+    .btn {
+        font-family: inherit;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 1.5;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.04em;
+        color: var(--color-accent);
+        background: var(--color-light);
+        border: 1px solid var(--color-soft);
+        border-radius: 4px;
+        cursor: pointer;
+        padding: 12px 24px;
+        transition: color var(--transition-dur-func), background-color var(--transition-dur-func), box-shadow var(--transition-dur-func), border var(--transition-dur-func);
+    }
+
+    .btn:hover,
+    .btn:focus {
+        color: var(--color-white);
+        background-color: var(--color-accent);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border: 1px solid var(--color-accent);
+    }
+
+    .btn-active {
+        color: var(--color-white);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        background-color: var(--color-accent);
+        border: 1px solid var(--color-accent);
+    } 
 }
 
-.btn-active {
-    color: var(--color-white);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    background-color: var(--color-accent);
-    border: 1px solid var(--color-accent);
+
+/* Desktop____________ */
+@media screen and (min-width: 1200px) {
+
+    .filter-list {
+        padding-top: 96px;
+        padding-bottom: 72px;
+    }
 }
+
 
 
 
 
 /* =================PORTFOLIO================== */
 
+
+/* Phone_____________ */
+@media screen and (max-width: 767.98px) {
 .list-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--color-title);
-    margin-bottom: 8px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: var(--color-title);
+        margin-bottom: 8px;
+    }
+
+    .portfolio-text {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--color-text);
+    }
+
+
+    .portfolio-list {
+        /* display: flex;
+        flex-wrap: wrap; */
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .portfolio-item {
+        width: 95vw;
+        max-width: 360px;
+        /* margin-left: 24px; */
+        margin-bottom: 48px;
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+        transition: box-shadow var(--transition-dur-func);
+    }
+
+    .portfolio-item:hover,
+    .portfolio-item:focus {
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.16);
+    }
+
+
+
+    .portfolio-border {
+        border: 0.5px solid var(--color-light);
+        padding-top: 32px;
+        padding-bottom: 32px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .portfolio-overlay {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 40px 32px;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        transform: translate(0, 100%);
+        transition: transform var(--transition-dur-func);
+        color: var(--color-light);
+        background-color: var(--color-accent);
+    }
+
+    .portfolio-link:hover .overlay,
+    .portfolio-link:focus .overlay {
+        transform: translate(0, 0);
+    }
 }
 
-.portfolio-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--color-text);
-}
+/* Tablet___________ */
+@media screen and (min-width: 768px) {
+.list-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: var(--color-title);
+        margin-bottom: 8px;
+    }
+
+    .portfolio-text {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--color-text);
+    }
 
 
-.filter-list {
-    display: flex;
-    text-align: center;
-    gap: 24px;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 72px;
+    .portfolio-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: -72px;
+        margin-left: -24px;
+        margin-bottom: 96px;
+    }
+
+    .portfolio-item {
+        
+        width: 356px;
+        margin-left: 24px;
+        margin-top: 72px;
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+        transition: box-shadow var(--transition-dur-func);
+    }
+
+    .portfolio-item:hover,
+    .portfolio-item:focus {
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.16);
+    }
+
+
+
+    .portfolio-border {
+        border: 0.5px solid var(--color-light);
+        padding-top: 32px;
+        padding-bottom: 32px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .portfolio-overlay {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 40px 32px;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        transform: translate(0, 100%);
+        transition: transform var(--transition-dur-func);
+        color: var(--color-light);
+        background-color: var(--color-accent);
+    }
+
+    .portfolio-link:hover .overlay,
+    .portfolio-link:focus .overlay {
+        transform: translate(0, 0);
+    }
 }
 
-.portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -48px;
-    margin-left: -24px;
+/* Desktop____________ */
+@media screen and (min-width: 1200px) {
+        .portfolio-list {
+            margin-bottom: 120px;
+            margin-top: -48px;
+        }
+    
+        .portfolio-item {
+            width: calc(100%/3 - 24px);
+            /* margin-left: 24px; */
+            margin-top: 48px;
+            /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+            transition: box-shadow var(--transition-dur-func); */
+        }
+    
+        /* .portfolio-item:hover,
+        .portfolio-item:focus {
+            box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.16);
+        }
+    
+    
+    
+        .portfolio-border {
+            border: 0.5px solid var(--color-light);
+            padding-top: 32px;
+            padding-bottom: 32px;
+            padding-left: 16px;
+            padding-right: 16px;
+        }
+    
+        .portfolio-overlay {
+            position: relative;
+            overflow: hidden;
+        }
+    
+        .overlay {
+            position: absolute;
+            left: 0;
+            top: 0;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            padding: 40px 32px;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            transform: translate(0, 100%);
+            transition: transform var(--transition-dur-func);
+            color: var(--color-light);
+            background-color: var(--color-accent);
+        }
+    
+        .portfolio-link:hover .overlay,
+        .portfolio-link:focus .overlay {
+            transform: translate(0, 0);
+        } */
+
 }
 
-.portfolio-item {
-    width: calc(100%/3 - 24px);
-    margin-left: 24px;
-    margin-top: 48px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-    transition: box-shadow var(--transition-dur-func);
-}
-
-.portfolio-item:hover,
-.portfolio-item:focus {
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.16);
-}
-
-.filter {
-    padding-top: 92px;
-    padding-bottom: 120px;
-}
-
-.portfolio-border {
-    border: 0.5px solid var(--color-light);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
-}
-
-.portfolio-overlay {
-    position: relative;
-    overflow: hidden; 
-}
-
-.overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    font-size: 16px; 
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 40px 32px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    transform: translate(0, 100%);
-    transition: transform var(--transition-dur-func) ;
-    color: var(--color-light) ;
-    background-color: var(--color-accent);
-}
-
-.portfolio-link:hover .overlay,
-.portfolio-link:focus .overlay {
-    transform: translate(0, 0);
-}
 
 /* ==========================MODAL WINDOW================================= */
 
@@ -1537,8 +1767,10 @@ screen (min-resolution: 2dppx) (min-width: 1200px) {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
-    height: 576px;
+    width: 95vw;
+    max-width: 408px;
+    height: 95vh;
+    max-height: 590px;
     background-color: #FCFCFC;
     border-radius: 4px;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 3px rgba(0, 0, 0, 0.12);
